[gd_scene load_steps=7 format=3 uid="uid://b2i2onos2y0js"]

[ext_resource type="Script" uid="uid://b2spp0avtrtar" path="res://registro.gd" id="1_g8ps7"]
[ext_resource type="Texture2D" uid="uid://bmv50m2emhcen" path="res://ui/fondos/iu 1.jpg" id="1_lmeoh"]
[ext_resource type="Texture2D" uid="uid://diepjwp7h5a4u" path="res://ui/titulo 2.png" id="2_y4e4u"]
[ext_resource type="Texture2D" uid="uid://ccbfa1cvypa8i" path="res://ui/buttons/next 1 of 1.png" id="3_g88jo"]
[ext_resource type="Texture2D" uid="uid://bbngtkoclnntv" path="res://ui/buttons/next 1 of 2.png" id="4_yl1hf"]
[ext_resource type="Script" uid="uid://btnqiglt2xi06" path="res://next_texture_button.gd" id="5_yl1hf"]

[node name="Registro" type="Node2D"]
script = ExtResource("1_g8ps7")

[node name="FondoTextureRect" type="TextureRect" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 12737.0
offset_bottom = 7093.0
scale = Vector2(0.09, 0.09)
texture = ExtResource("1_lmeoh")

[node name="TituloTextureRect2" type="TextureRect" parent="."]
offset_left = 272.0
offset_top = -87.0
offset_right = 2728.0
offset_bottom = 2502.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_y4e4u")

[node name="Titulo1MarginContainer" type="MarginContainer" parent="."]
light_mask = 0
clip_contents = true
offset_left = 262.0
offset_top = -10.0
offset_right = 872.0
offset_bottom = 300.0
size_flags_horizontal = 10
localize_numeral_system = false

[node name="Titulo2Label" type="Label" parent="Titulo1MarginContainer"]
layout_mode = 2
text = "Registrate en "
horizontal_alignment = 1
vertical_alignment = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 488.0
offset_top = 488.0
offset_right = 928.0
offset_bottom = 726.0
scale = Vector2(0.4, 0.4)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NextTextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_g88jo")
texture_pressed = ExtResource("4_yl1hf")
stretch_mode = 3
script = ExtResource("5_yl1hf")

[node name="PlayerNameInput" type="LineEdit" parent="."]
offset_left = 377.0
offset_top = 296.0
offset_right = 772.0
offset_bottom = 356.0
placeholder_text = "Escribe tu nombre"
virtual_keyboard_type = 1

[node name="PlayerAgeInput2" type="LineEdit" parent="."]
offset_left = 377.0
offset_top = 398.0
offset_right = 764.0
offset_bottom = 457.0
placeholder_text = "Edad"
virtual_keyboard_type = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/NextTextureButton" to="." method="_on_pressed"]
